samples/_failures_safe/1761618274_973857_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7f6731e.c: In function ‘main’:
./samples/SAFE/__tmp_a7f6731e.c:186:17: error: expected ‘;’ at end of input
  186 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_a7f6731e.c:186:9: error: expected declaration or statement at end of input
  186 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_a7f6731e.c:186:9: error: expected declaration or statement at end of input
